--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="css/font-awesome.min.css">
 
     </head>
-    <body <!--onload="Cargar();"--> 
+    <body> 
         <div class="row fondo">
             <div class="col-sm-12 col-md-12 col-lg-12">
                 <h1 class="text-center text-uppercase">Control Numero 2</h1>
