--- a/vista/listar.html
+++ b/vista/listar.html
@@ -31,20 +31,20 @@
         <!-- aqui partimos el data table -->
 
 
-        <script src="js/jquery-1.12.3.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.dataTables.min.js"></script>
-        <script src="js/dataTables.bootstrap.js"></script>
+        <script src="../js/jquery-1.12.3.js"></script>
+        <script src="../js/bootstrap.min.js"></script>
+        <script src="../js/jquery.dataTables.min.js"></script>
+        <script src="../js/dataTables.bootstrap.js"></script>
         <!--botones DataTables-->	
-        <script src="js/dataTables.buttons.min.js"></script>
-        <script src="js/buttons.bootstrap.min.js"></script>
+        <script src="../js/dataTables.buttons.min.js"></script>
+        <script src="../js/buttons.bootstrap.min.js"></script>
         <!--Libreria para exportar Excel-->
-        <script src="js/jszip.min.js"></script>
+        <script src="../js/jszip.min.js"></script>
         <!--Librerias para exportar PDF-->
-        <script src="js/pdfmake.min.js"></script>
-        <script src="js/vfs_fonts.js"></script>
+        <script src="../js/pdfmake.min.js"></script>
+        <script src="../js/vfs_fonts.js"></script>
         <!--Librerias para botones de exportación-->
-        <script src="js/buttons.html5.min.js"></script>
+        <script src="../js/buttons.html5.min.js"></script>
 
         <script type="text/javascript">
                 $(document).ready(function () {
@@ -55,7 +55,7 @@
 //console.log(data);
                         var o = JSON.parse(data);
                         console.log(o);
-                        document.write("<table>");
+                        document.write("<table border='1' class='table table-striped table-bordered' style='width:100%'>");
                         document.write("<tr>");
                         document.write("<th>id</th>");
                         document.write(" <th>user</th>");
