--- a/vista/listar.html
+++ b/vista/listar.html
@@ -55,7 +55,8 @@
 //console.log(data);
                         var o = JSON.parse(data);
                         console.log(o);
-                        document.write("<table border='1' class='table table-striped table-bordered' style='width:100%'>");
+                        document.write("<table border='1' class='table table-striped table-bordered' style='width:100%'\n\
+                >");
                         document.write("<tr>");
                         document.write("<th>id</th>");
                         document.write(" <th>user</th>");
