--- a/vista/listar.html
+++ b/vista/listar.html
@@ -59,8 +59,9 @@
                 >");
                         document.write("<tr>");
                         document.write("<th>id</th>");
-                        document.write(" <th>user</th>");
-                        document.write("<th>pass</th>");
+                        document.write(" <th>Nombre</th>");
+                        document.write("<th>Codigo</th>");
+                        document.write("<th>Valor</th>");
                         document.write("</tr>");
                         $.each(o, function (index, value) {
                             document.write("<tr>");
