--- a/vista/listar2.html
+++ b/vista/listar2.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html lang="es">
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
     <head>
-        <meta charset="UTF-8">
-        <title>Control 2</title>
+        <meta charset="utf-8">
+        <title>Listado de Productos</title>
         <script
             src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-            crossorigin="anonymous">
-        </script>
+            crossorigin="anonymous"></script>
         <!-- Latest compiled and minified CSS -->
         <link
             rel="stylesheet"
@@ -34,60 +38,40 @@
         <script src="https://unpkg.com/sweetalert2@7.19.3/dist/sweetalert2.all.js"></script>
 
 
-        <link rel="stylesheet" href="../css/login.css">
+        <link rel="stylesheet" href="css/login.css">
 
     </head>
-    <body <!--onload="Cargar();"--> 
-        <div class="row fondo">
-            <div class="col-sm-12 col-md-12 col-lg-12">
-                <h1 class="text-center text-uppercase">Control Numero 2</h1>
-            </div>
-        </div>
-        <br>
+    <body>        
 
-        <!-- aqui parte el navBar -->
-
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="listar2.html">Listar Producto |</a>
-            <a class="navbar-brand" href="crear.html">Crear Producto |</a>
-            <a class="navbar-brand" href="eliminar.html">Eliminar Producto |</a>
-            <a class="navbar-brand" href="actualizar.html">Actualizar Producto |</a>
-
-        </nav>
-        
-        <!-- ejecutamos otra manera de dibujar la tabla-->
         <script type="text/javascript">
-            $(document).ready(function () {
-                $.get("../controller/listarproducts.php", function (data) {
-                    var o = JSON.parse(data);
-                    console.log(o);
-                    document.write("<table>");
-                    document.write("<tr>");
-                    document.write("<th>id</th>");
-                    document.write(" <th>nombre</th>");
-                    document.write("<th>codigo</th>");
-                    document.write("<th>valor</th>");
-                    document.write("</tr>");
-                    $.each(o, function (index, value) {
+                $(document).ready(function () {
+                    $.get("../controller/listarproducto.php", function (data) {
+                        //  debugger;
+//                        console.log(data);
+                       document.write(data);
+//console.log(data);
+                        var o = JSON.parse(data);
+                        console.log(o);
+                        document.write("<table>");
                         document.write("<tr>");
-                        document.write("<td>", value.id, "</td>");
-                        document.write("<td>", value.nombre, "</td>");
-                        document.write("<td>", value.codigo, "</td>");
-                        document.write("<td>", value.valor, "</td>");
+                        document.write("<th>id</th>");
+                        document.write(" <th>Nombre</th>");
+                        document.write("<th>Codigo</th>");
+                        document.write("<th>Valor</th>");
                         document.write("</tr>");
-                        console.log(value);
+                        $.each(o, function (index, value) {
+                            document.write("<tr>");
+                            document.write("<td>", value.id, "</td>");
+                            document.write("<td>", value.nombre, "</td>");
+                            document.write("<td>", value.codigo, "</td>");
+                            document.write("<td>", value.valor, "</td>");
+                            document.write("</tr>");
+                            console.log(value);
+                        });
+                        document.write("</table>");
                     });
-                    document.write("</table>");
                 });
-            });
-        </script>   
-        
-
-        <!-- aqui partimos el data table -->
-
-        <div id="resultado"></div>
-        <!--<button onclick="Cargar();" class="btn btn-primary" data-dismiss="modal">Mostrar Datos</button> -->
-
+        </script>  
 
     </body>
 </html>
