--- a/vista/listar.html
+++ b/vista/listar.html
@@ -41,7 +41,7 @@
         <!--Libreria para exportar Excel-->
         <script src="../js/jszip.min.js"></script>
         <!--Librerias para exportar PDF-->
-        <script src="../js/pdfmake.min.js"></script>
+        <!--<script src="../js/pdfmake.min.js"></script> -->
         <script src="../js/vfs_fonts.js"></script>
         <!--Librerias para botones de exportación-->
         <script src="../js/buttons.html5.min.js"></script>
@@ -50,13 +50,12 @@
                 $(document).ready(function () {
                     $.get("../controller/listarproducto.php", function (data) {
                         //  debugger;
-//                        console.log(data);
+                        console.log(data);
 //                        document.write(data);
 //console.log(data);
                         var o = JSON.parse(data);
-                        console.log(o);
-                        document.write("<table border='1' class='table table-striped table-bordered' style='width:100%'\n\
-                >");
+                        //console.log(o);
+                        document.write("<table>");
                         document.write("<tr>");
                         document.write("<th>id</th>");
                         document.write(" <th>Nombre</th>");
